# pattern-agentic-memory-system

./: .gitignore  GOLD_STAR_VALIDATION_REPORT.md  GOLD_STAR_VALIDATION_REPORT_PHASE3_INDEPENDENT.md  LICENSE  MIGRATION_MANIFEST.txt  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_3_VALIDATION_REPORT.md  README.md  REPOSITORY_STATUS.txt  REPOSITORY_STRUCTURE.txt  STAGE2_COMPLETION_REPORT.md  STAGE3_COMPLETION_REPORT.md  STAGE4_VALIDATION_REPORT.md  STAGE_1_COMPLETION_REPORT.md  VALIDATION_COMPARISON_SUMMARY.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
.mr_ai/: ORCHESTRATOR_RULES.md  config.yaml  generate_work_order.sh  test_framework.sh  update_wisdom.sh  validate.sh
.mr_ai/agents/work_orders/: PHASE_2_ACTIVITY_BASED_DECAY.md  PHASE_3_ACCESS_BASED_TIER_PROMOTION.md
.mr_ai/evidence/: SESSION_HANDOFF_2025-11-21_PHASE_2_COMPLETE.md
.mr_ai/templates/: WORK_ORDER_TEMPLATE.md
.mr_ai/validation/: validate_evidence.py
.mr_ai/wisdom/: AGENT_WISDOM.md
docs/: ACCESS_BASED_TTL_DESIGN.md  ADAPTIVE_MEMORY_QUICK_REFERENCE.md  MEMORY_COMMAND_CHEATSHEET.md  MEMORY_SYSTEM_AGENT_INTEGRATION_GUIDE.md  MEMORY_SYSTEM_USER_GUIDE.md
scripts/: memory_keeper_schema_migration_access_ttl.sql  vector_cleanup_activity_based.py
src/pattern_agentic_memory/adapters/: __init__.py  memory_keeper.py  neo4j_working.py
src/pattern_agentic_memory/core/: __init__.py  command_parser.py  decay_functions.py  importance_evaluator.py  memory_system.py  tier_classifier.py  tier_promotion.py
src/pattern_agentic_memory/integrations/claude_mcp/: __init__.py
src/pattern_agentic_memory/integrations/mimo_agents/: __init__.py
src/pattern_agentic_memory/integrations/pattern_continuum/: __init__.py
tests/: phase3_access_ttl_tests.py
tests/e2e/: test_activity_based_decay.py  test_e2e_scenarios.py
tests/integration/: test_integration.py
tests/performance/: test_performance.py
tests/stability/: test_stability.py
tests/unit/: test_command_parser.py  test_importance_evaluator.py  test_memory_system.py  test_tier_classifier.py
