[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pattern-agentic-memory"
version = "0.1.0"
description = "Adaptive Memory System with Identity Anchor Pattern - Never Fade to Black"
authors = ["Pattern Agentic <team@patternagentic.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://patternagentic.ai"
repository = "https://github.com/pattern-agentic/pattern-agentic-memory-system"
documentation = "https://github.com/pattern-agentic/pattern-agentic-memory-system/tree/main/docs"
keywords = ["memory", "ai-agents", "identity-preservation", "graph-rag", "adaptive-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "pattern_agentic_memory", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Zero required dependencies - all optional!
neo4j = {version = "^5.14", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
black = "^24.0"
mypy = "^1.0"
ruff = "^0.8"

[tool.poetry.group.mcp]
optional = true

[tool.poetry.group.mcp.dependencies]
# Optional: for Memory Keeper MCP integration
# Add when we know the exact MCP package name

[tool.poetry.group.neo4j]
optional = true

[tool.poetry.group.neo4j.dependencies]
neo4j = "^5.14"

[tool.poetry.group.vector]
optional = true

[tool.poetry.group.vector.dependencies]
# Optional: for Graph RAG vector search
# qdrant-client = "^1.7"
# pymilvus = "^2.3"

[tool.poetry.extras]
mcp = []
neo4j = ["neo4j"]
vector = []
all = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=pattern_agentic_memory --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = []
